# nxvpnapi

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  dockerfile
.github/workflows/: build-and-push-to-docker-hub.yml
admin-panel/: app.js  index.html  styles.css
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2026-02-18-000001_initialize_database/: down.sql  up.sql
migrations/2026-02-20-000003_add_refresh_token_to_users/: down.sql  up.sql
src/: auth.rs  config.rs  crypto.rs  db.rs  handlers.rs  jwt.rs  lib.rs  main.rs  models.rs  openapi.rs  schema.rs
