[package]
name = "nxvpnapi"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7"
actix-files = "0.6"
actix-web = "4"
anyhow = "1"
argon2 = { version = "0.5", features = ["std", "password-hash", "rand"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenvy = "0.15"
env_logger = "0.11"
jsonwebtoken = "9"
log = "0.4"
scalar_api_reference = { version = "0.1", features = ["actix-web"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "=0.3.45"
time-core = "=0.1.7"
time-macros = "=0.2.25"
utoipa = { version = "4", features = ["actix_extras", "chrono", "uuid"] }
uuid = { version = "1", features = ["serde", "v4"] }
